# SnakeGameSDL

./: CMakeLists.txt  README  main.cpp
cmake/sdl2/: FindSDL2.cmake
header/: Game.h  Header.h
include/: Apple.h  Game.h  Header.h  LTexture.h  Snake.h  SnakeCell.h  Texture.h  Util.h
src/: Apple.cpp  Game.cpp  LTexture.cpp  Snake.cpp  SnakeCell.cpp  Texture.cpp  Util.cpp
